# colorwheel_bump

./: .gitattributes  .gitignore  CNAME  Cargo.toml  Trunk.toml  build.rs  index.html  readme.md  rust-toolchain.toml  wasm-launcher-2b375e0e8d20d4d0.js  wasm-launcher-6a1536c4054d3757.js  wasm-launcher-d9a53d283c6bdc46.js  wasm-launcher-f2c239edbdf29384.js
.github/workflows/: release-gh-pages.yml  release-native.yml
launchers/native/: Cargo.toml
launchers/native/src/: main.rs
launchers/wasm/: Cargo.toml  index.html
launchers/wasm/src/: main.rs
src/: bump.rs  config.rs  coop.rs  input.rs  lib.rs  menu.rs
src/core/: crystal.rs  input.rs  mod.rs  platform.rs  player.rs
src/modes/: bump.rs  coop.rs  gym.rs  mod.rs
