[package]
name = "prismpals"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
]

[[bin]]
name="native-launcher"
path="launchers/native/src/main.rs"

[dependencies]
bevy = "0.8"
bevy_ggrs = { version = "0.10", features = ["wasm-bindgen"] }
bevy_prototype_lyon = "0.6"
bevy_rapier2d = { version = "0.16", features = ["debug-render", "wasm-bindgen", "enhanced-determinism"] }

ggrs = "0.9"
image = "0.24.3"
matchbox_socket = { version = "0.3", features = ["ggrs-socket"] }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rand = "0.8"
semver = "1.0"
strum = "0.24"
strum_macros = "0.24"
winit = "0.26"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "7.4", default-features = false, features = ["build", "git", "rustc"] }

[patch.crates-io]
# bevy_ggrs = {git = "https://github.com/gschup/bevy_ggrs" }
# ggrs = { git = "https://github.com/gschup/ggrs" }
matchbox_socket = { git = "https://github.com/johanhelsing/matchbox", branch = "main" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
