[package]
name = "colorwheel_bump"
version = "1.0.0"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
]

[[bin]]
name="native-launcher"
path="launchers/native/src/main.rs"

[dependencies]
bevy = "0.8"
bevy_prototype_lyon = "0.6"
bevy_rapier2d = { version = "0.16", features = ["debug-render", "wasm-bindgen", "enhanced-determinism"] }
bevy_text = "0.8"

image = "0.24.3"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rand = "0.8"
semver = "1.0"
strum = "0.24"
strum_macros = "0.24"
winit = "0.26"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "7.4", default-features = false, features = ["build", "git", "rustc"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
